welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:3: error: type mismatch;
 found   : Unit
 required: Boolean
    for (i <- 0 to nums.length -1) {
           ^arrayFront9:12: error: not found: value i
      if (nums(i) == 9) {
               ^arrayFront9:11: error: type mismatch;
 found   : Unit
 required: Boolean
    for (j <- 0 to 3) {
           ^